@@ -51,6 +51,7 @@ This release includes the following bugfixes:
  o re-use of connections with failed SSL connects in the multi interface
  o NTLM over proxy state was wrongly cleared when host connection was closed
  o Windows SSPI DLL loading is now done in curl_global_init()
+ o runtests.pl has an improved find-stunnel-and-invoke
 
 This release includes the following known bugs:
 
@@ -72,7 +73,7 @@ advice from friends like these:
  Phil Pellouchoud, Eduard Bloch, John Lightsey, Stephen Collyer, Tor Arntsen,
  Rolland Dudemaine, Phil Blundell, Scott Barrett, Andreas Schuldei,
  Peter Lamberg, David Bau, Pramod Sharma, Yehoshua Hershberg,
- Constantine Sapuntzakis, Lars Nilsson
+ Constantine Sapuntzakis, Lars Nilsson, Andy Tsouladze
 
 
         Thanks! (and sorry if I forgot to mention someone)
